updated css on appointments page, removed css file not used

--- a/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
@@ -132,7 +132,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                             chosenFormatted += '<p class="appointmentDesc">' + cappt.Description__c + '</p>';
                         }
                         IF (cappt.Chosen_State__c != 'Added and Required' && cappt.Chosen_State__c != 'Added but not shown') {
-                            chosenFormatted += '<a href="javascript:;" class="appointmentRemove" title="Remove Appointment">Remove</a>';
+                            chosenFormatted += '<a href="javascript:;" class="appointmentRemove slds-button slds-button_neutral" title="Remove Appointment">Remove</a>';
                         }
 
                         chosenFormatted += '</div>';
